// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cZLtoy"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 hxighS"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cZLtoy"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 egNRWE"
    color="primary"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 iTsHfJ"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 gJHWFR"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cZLtoy"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 bKriaS"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 gJHWFR"
    color="warning"
  />
</div>
`;
